--- a/TLHFaceTrack/App.xaml
+++ b/TLHFaceTrack/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:TLHFaceTrack"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/TLHFaceTrack;component/styles/ButtonStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
