--- a/TLHFaceTrack/MainWindow.xaml
+++ b/TLHFaceTrack/MainWindow.xaml
@@ -14,7 +14,7 @@
           HorizontalAlignment="Stretch">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="60" />
+            <ColumnDefinition Width="200" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
@@ -22,7 +22,7 @@
         </Grid.RowDefinitions>
         <Border BorderBrush="Gray" 
                 BorderThickness="1" 
-                Grid.Column="0" Grid.Row="1"
+                Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2"
                 Margin="5"
                 VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
             <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
@@ -38,6 +38,7 @@
         <StackPanel Orientation="Horizontal" 
                     VerticalAlignment="Center" 
                     Height="80" 
+                    Margin="5"
                     Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2">
             <Button x:Name="Button_Start" 
                     Style="{DynamicResource StyleButton}"
@@ -60,5 +61,13 @@
                 </StackPanel>
             </Button>
         </StackPanel>
+        <CheckBox x:Name="CB_FaceRecognition"
+                  Click="CB_FaceRecognition_Click"
+                  Grid.Column="1" Grid.Row="0"
+                  VerticalAlignment="Bottom"
+                  HorizontalAlignment="Right"
+                  Margin="15, 5, 5, 10">
+            <TextBlock Text="{x:Static prop:Resources.Res_FaceRecPrompt}" Foreground="White" FontWeight="Bold"/>
+        </CheckBox>
     </Grid>
 </Window>
